2005-10-29  Nick Roberts  <nickrob@snap.net.nz>

	* tool-bar.el (tool-bar-add-item-from-menu)
	(tool-bar-local-item-from-menu): Fix doc strings.

2005-10-28  Romain Francoise  <romain@orebokech.com>

	* ldefs-boot.el: Update.

	* subr.el (locate-library): Move from help-fns.el.
	* help-fns.el (locate-library): Move to subr.el.

2005-10-28  Richard M. Stallman  <rms@gnu.org>

	* net/tramp.el (tramp-completion-mode): defvar moved up.

	* emacs-lisp/easymenu.el (easy-menu-change): Doc fix.

	* tool-bar.el (tool-bar-mode): Delete autoload cookie.

	* files.el (find-file-noselect): Use %d to format large file size.

	* bindings.el (mode-line-format): Add %e.

	* loadup.el ("facemenu"): Load unconditionally.
	("image", "international/fontset", "dnd", "mwheel", "tool-bar"):
	("x-dnd"): Load, when appropriate.

	* startup.el (command-line): Call before-init-hook earlier.
	Warn about some bad characters in -u user name.

	* textmodes/flyspell.el (flyspell-large-region): Pass -t if Tex file.
	(flyspell-external-point-words): Error if misspelled word is not found.
	Set flyspell-large-region-beg at end of word.

2005-10-28  Andreas Schwab  <schwab@suse.de>

	* view.el (View-revert-buffer-scroll-page-forward): Use
	view-page-size-default.

2005-10-28  Juri Linkov  <juri@jurta.org>

	* international/quail.el (quail-get-current-str): Translate last
	raw character for deterministic input methods.

2005-10-27  Jay Belanger  <belanger@truman.edu>

	* calc/calc-ext.el: Add functions to autoloads.
	(math-identity-matrix-p, math-ident-row-p): New functions.

	* calc/calc-arith.el (calc-mul-symb-fancy): Add checks for
	multiplication by an identity matrix; don't turn multiplication by
	an inverse matrix into division.
	(math-div-symbol-fancy):  Replace division by matrices with
	multiplication by inverse.

	* calc/calc-misc.el (calcFunc-inv): Check for symbolic matrices.

	* calc/calc-alg.el (calcFunc-writeoutpower, math-write-out-power)
	(calc-writeoutpower): New functions.
